feat(types): bilingual hover/completion/signature + вариадик-параметры
Завершение bilingual-поддержки type-system v2 и вариадик-параметров.
Зависимость bsl-context поднята до 0.4.0 (флаг ContextSignatureParameter.isVariadic()).

Стандартные реквизиты MD-объектов (bilingual):
- ConfigurationTypesProvider: attributeBilingualName() из MultiName (ru+en),
  bilingual имя/описание членов; completion отдаёт реквизиты в языке ScriptVariant.
- AssignToReadOnlyPropertyDiagnostic: убран кривой pre-filter по имени —
  read-only резолвится по типу-владельцу, независимо от языка имени (Ссылка/Ref).
- builtin-platform-types.json: bilingual стандартные реквизиты Справочник/ДокументСсылка.

Унификация bilingual-модели членов:
- BuiltinPlatformTypesProvider.mergeBilingualPairs: соседние ru/en-члены OneScript-дампа
  склеиваются в один bilingual MemberDescriptor при загрузке.
- CompletionProvider: удалён filterMembersByLanguage; язык через member.displayName/
  displayDescription(scriptVariant); документация и сигнатура итемов следуют языку.

Язык интерфейса (hover/signature help) = настройки LS (configuration.getLanguage()),
а не ScriptVariant (язык исходников):
- VariableSymbolMarkupContentBuilder.renderRef, SyntheticSymbolMarkupContentBuilder,
  SignatureHelpProvider — имена типов/параметров через displayName(lang), разделитель
  коллекции «из»/«Of» локализован; TypeService.displayName(ref, lang).
- DocumentContext.getScriptVariantLanguage(): мягкий fallback на UI-язык при UNKNOWN.

Вариадик-параметры (Структура/ФиксСтруктура/СтрШаблон/Макс/Мин/Массив/ФорматированнаяСтрока):
- ParameterDescriptor.variadic + JSON-поле variadic; SignatureSelection по флагу.
- Инлей-хинты и signature help разворачивают вариадик-хвост в нумерованные
  Значение1/Значение2/… по фактическим аргументам.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>